minor restructuring of HTML, removed dropbox.html

--- a/create-account.html
+++ b/create-account.html
@@ -11,7 +11,7 @@
     <header role="header">
         <h1>Our Two Cents</h1>
         <a href="" id="about-our-site-icon">About Our Site (icon link)</a>
-        <a href="" id="dropdown-icon">Dropdown Menu (icon link)</a>
+        <a href="" id="home-icon">Main Page (icon link)</a>
     </header>
     <main role="main">
         <h2>Create your Account</h2>
