--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
     <header role="header">
         <h1>Our Two Cents</h1>
         <a href="" id="about-our-site-icon">About Our Site (icon link)</a>
-        <a href="" id="dropdown-icon">Dropdown Menu (icon link)</a>
+        <a href="" id="home-icon">Main Page (icon link)</a>
     </header>
     <main role="main">
         <h2>Sign In to your account.</h2>
@@ -23,8 +23,8 @@
                 <input type="password" placeholder="minimum 10 characters" id="login-password" required>
                 <button type="submit">Sign In</button>
             </form>
-            <h2><a href="">Or sign up to create your account...</a></h2>
         </section>
+        <h3><a href="">Or sign up to create your account...</a></h3>
     </main>
     <footer role="footer">
         <ul>
