--- a/main-page.html
+++ b/main-page.html
@@ -11,7 +11,7 @@
     <header role="header">
         <h1>Our Two Cents</h1>
         <a href="" id="about-our-site-icon">About Our Site (icon link)</a>
-        <a href="" id="dropdown-icon">Dropdown Menu (icon link)</a>
+        <a href="" id="home-icon">Main Page (icon link)</a>
     </header>
     <main role="main">
         <h2>Pick a topic with a differing viewpoint, or <a href="">click here to start a topic...</a></h2>
@@ -33,6 +33,10 @@
                     <button class="start-conversation-button">Start Conversation</button>
                 </li>
             </ul>
+        </section>
+        <section class="waiting-for-other-person-section">
+            <h3 class="waiting-text">Notifying the other person to begin your conversation on "Gun Control". Your chat will open shortly.</h3>
+            <button class="cancel-conversation-button">Cancel</button>
         </section>
     </main>
     <footer role="footer">
