--- a/create-account.html
+++ b/create-account.html
@@ -10,8 +10,8 @@
 <body>
     <header role="header">
         <h1>Our Two Cents</h1>
-        <a href="" id="about-our-site-icon">About Our Site (icon link)</a>
-        <a href="" id="home-icon">Main Page (icon link)</a>
+        <a href="./landing-page.html" id="about-our-site-icon">About Our Site (icon link)</a>
+        <a href="main-page.html" id="home-icon">Main Page (icon link)</a>
     </header>
     <main role="main">
         <h2>Create your Account</h2>
@@ -30,7 +30,7 @@
     </main>
     <footer role="footer">
         <ul>
-            <li><a href="">About Our Site</a></li>
+            <li><a href="./landing-page.html">About Our Site</a></li>
             <li><a href="">Contact Us</a></li>
             <li><a href="">Others In Our Mission</a></li>
         </ul>
