--- a/landing-page.html
+++ b/landing-page.html
@@ -10,19 +10,19 @@
 <body>
     <header role="header">
         <h1>Our Two Cents</h1>
-        <a href="" id="about-our-site-icon">About Our Site (icon link)</a>
-        <a href="" id="home-icon">Main Page (icon link)</a>
+        <a href="./landing-page.html" id="about-our-site-icon">About Our Site (icon link)</a>
+        <a href="main-page.html" id="home-icon">Main Page (icon link)</a>
     </header>
     <main role="main">
         <h2>About Our Site</h2>
         <section class="about-our-site-section">
             <p>Do you ever wonder how some people have such different opinions?  Do wish you could understand their perspective better? At Our Two Cents, we want to...</p>
-            <a href="">Continue onto the site</a>
+            <a href="./login.html">Continue onto the site</a>
         </section>
     </main>
     <footer role="footer">
         <ul>
-            <li><a href="">About Our Site</a></li>
+            <li><a href="./landing-page.html">About Our Site</a></li>
             <li><a href="">Contact Us</a></li>
             <li><a href="">Others In Our Mission</a></li>
         </ul>
