--- a/main-page.html
+++ b/main-page.html
@@ -10,11 +10,11 @@
 <body>
     <header role="header">
         <h1>Our Two Cents</h1>
-        <a href="" id="about-our-site-icon">About Our Site (icon link)</a>
-        <a href="" id="home-icon">Main Page (icon link)</a>
+        <a href="./landing-page.html" id="about-our-site-icon">About Our Site (icon link)</a>
+        <a href="main-page.html" id="home-icon">Main Page (icon link)</a>
     </header>
     <main role="main">
-        <h2>Pick a topic with a differing viewpoint, or <a href="">click here to start a topic...</a></h2>
+        <h2>Pick a topic with a differing viewpoint, or <a href="./create-conversation.html">click here to start a topic...</a></h2>
         <section class="available-conversation-section">
             <ul>
                 <li class="available-conversation-item" conversation-id="394" user-host-id="mweo2309d9" index=0>
@@ -36,12 +36,13 @@
         </section>
         <section class="waiting-for-other-person-section">
             <h3 class="waiting-text">Notifying the other person to begin your conversation on "Gun Control". Your chat will open shortly.</h3>
+            (Accepted matching doesn't work yet, <a href="./conversation.html">Start Conversation</a>)
             <button class="cancel-conversation-button">Cancel</button>
         </section>
     </main>
     <footer role="footer">
         <ul>
-            <li><a href="">About Our Site</a></li>
+            <li><a href="./landing-page.html">About Our Site</a></li>
             <li><a href="">Contact Us</a></li>
             <li><a href="">Others In Our Mission</a></li>
         </ul>
