linking index.js with html page

--- a/public/landing-page.html
+++ b/public/landing-page.html
@@ -26,6 +26,7 @@
             <li><a href="">Contact Us</a></li>
             <li><a href="">Others In Our Mission</a></li>
         </ul>
-    </footer> 
+    </footer>
+    <script src="index.js"></script>
 </body>
 </html>
